src/main/resources/deployments/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypriori-app
spec:
  rules:
  - host: mypriori.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mypriori-app
            port:
              number: 8080
